--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<p>Here, we got green lawns for you to have a good time with your lawn-tennis buddies as well as to train you for the professional game training.</p>
 		</td>
 		<td>
-			<img src="lt.jpg" width="100%" height="420px">
+			<img src="lt.JPG" width="100%" height="420px">
 		</td>
 	</tr>
 	<tr align="center">
